use mustache CRUD

--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/login-form">로그인</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/board/save-form">글쓰기</a>
+                    <a class="nav-link" href="/board/save">글쓰기</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/board/list">게시글 목록 보기</a>
