--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/board/detail.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/board/detail.mustache
@@ -1,22 +1,24 @@
-{{>layout/header}}
+{{> layout/header}}
+
 <div class="container p-5">
 
     <!-- 수정삭제버튼 -->
     <div class="d-flex justify-content-end">
-        <form action="board/{{board.id}}/delete" method="post">
+        <!-- form 수정해 주세요  -->
+        <form action="/board/{{board.id}}/delete" method="post">
             <button class="btn btn-danger">삭제</button>
         </form>
+        <a href="/board/{{board.id}}/update"  class="btn btn-warning me-1">수정</a>
 
-        <a href="/board/{{board.id}}/update" class="btn btn-warning me-1">수정</a>
     </div>
     <div class="d-flex justify-content-end">
-        <b>작성자</b> : {{board.username}}
+        <b>작성자</b> : {{board.user.username}}
     </div>
 
     <!-- 게시글내용 -->
     <div>
         <h2><b>{{board.title}}</b></h2>
-        <hr/>
+        <hr />
         <div class="m-4 p-2">
             {{board.content}}
         </div>
@@ -62,4 +64,5 @@
         </div>
     </div>
 </div>
-{{>layout/footer}}
+
+{{> layout/footer}}
