--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
@@ -3,8 +3,8 @@
 
 <head>
     <title>Blog</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -20,12 +20,8 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/join-form">회원가입</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login-form">로그인</a>
-                </li>
+
+                {{#sessionUser}}
                 <li class="nav-item">
                     <a class="nav-link" href="/board/save">글쓰기</a>
                 </li>
@@ -33,11 +29,21 @@
                     <a class="nav-link" href="/board/list">게시글 목록 보기</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/update-form">회원정보보기</a>
+                    <a class="nav-link" href="/user/update">회원정보보기</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">로그아웃</a>
                 </li>
+                {{/sessionUser}}
+
+                {{^sessionUser}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/join">회원가입</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">로그인</a>
+                </li>
+                {{/sessionUser}}
             </ul>
         </div>
     </div>
