--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/board/update-form.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/board/update-form.mustache
@@ -10,7 +10,7 @@
                     <input type="text" class="form-control"
                            placeholder="Enter username"
                            name="username"
-                           value="{{board.user.username}}">
+                           value="{{board.username}}">
                 </div>
 
                 <div class="mb-3">
