--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="/board/list">게시글 목록 보기</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/update">회원정보보기</a>
+                    <a class="nav-link" href="/user/detail">회원정보보기</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">로그아웃</a>
