--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/update-form.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/update-form.mustache
@@ -1,4 +1,4 @@
-{{>layout/header}}
+{{> layout/header}}
 <div class="container p-5">
 
     <!-- 요청을 하면 localhost:8080/join POST로 요청됨
@@ -7,19 +7,54 @@
     <div class="card">
         <div class="card-header"><b>회원수정을 해주세요</b></div>
         <div class="card-body">
-            <form action="/user/update" method="post" enctype="application/x-www-form-urlencoded">
-                <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" value="{{user.username}}" disabled>
+
+
+        <div class="text-center mb-4">
+            {{#user.profileImage}}
+            {{!어 src 경로가 /images/ 이네... 스프링에 등록한 리소드 핸들러가 동작 함 }}
+                <img src="/images/{{user.profileImage}}" alt="프로필사진" class="rounded-circle border"
+                     style="width: 200px;height: 200px; object-fit: cover">
+                <div class="mt-2">
+                    <form action="/user/profile-image/delete" method="post" style="display: inline">
+                        <button type="submit" class="btn btn-sm btn-danger"
+                                onclick="return confirm('프로필 사진을 삭제하시겠습니까?')">프로필삭제
+                        </button>
+                    </form>
                 </div>
-                <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Enter password" name="password">
+            {{/user.profileImage}}
+            {{^user.profileImage}}
+                <div class="rounded-circle bg-secondary d-inline-flex align-items-center justify-content-center border"
+                     style="width: 200px; height: 200px;">
+                    <span class="text-white fs-5">프로필 사진 없음</span>
                 </div>
-                <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Enter email" name="email" value="{{user.email}}" disabled>
-                </div>
-                <button type="submit" class="btn btn-primary form-control">회원가입수정</button>
-            </form>
+            </div>
+            {{/user.profileImage}}
         </div>
+
+        <!-- form 태그의 enctype 타입을 반드시 multipart/form-data로 변경해야함-->
+        <form action="/user/update" method="post" enctype="multipart/form-data">
+            <div class="mb-3">
+                <input type="text" class="form-control" placeholder="Enter username" name="username"
+                       value="{{user.username}}">
+            </div>
+            <div class="mb-3">
+                <input type="password" class="form-control" placeholder="Enter password" name="password" required>
+            </div>
+            <div class="mb-3">
+                <input type="email" class="form-control" placeholder="Enter email" name="email"
+                       value="{{user.email}}">
+            </div>
+
+            <div class="mb-3">
+                <label for="profileImage" class="form-label">프로필 사진(선택사항)</label>
+                <input type="file" class="form-control" id="profileImage" name="profileImage" accept="image/*">
+                <small class="form-text text-muted mt-1">이미지 파일만 업로드 가능합니다(JPG, PNG, GIF)</small>
+            </div>
+
+            <button type="submit" class="btn btn-primary form-control">회원정보 수정</button>
+        </form>
     </div>
 </div>
-{{>layout/footer}}
+</div>
+
+{{> layout/footer}}
