--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/layout/header.mustache
@@ -22,29 +22,45 @@
             <ul class="navbar-nav">
 
                 {{#sessionUser}}
-                <li class="nav-item">
-                    <a class="nav-link" href="/board/save">글쓰기</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/board/list">게시글 목록 보기</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/detail">회원정보보기</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">로그아웃</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/board/save">글쓰기</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/board/list">게시글 목록 보기</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/detail">회원정보보기</a>
+                    </li>
+                    {{#isAdmin}}
+                        <li>
+                            <a class="nav-link" href="/admin/dashboard">관리자</a>
+                        </li>
+                    {{/isAdmin}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">로그아웃</a>
+                    </li>
                 {{/sessionUser}}
 
                 {{^sessionUser}}
-                <li class="nav-item">
-                    <a class="nav-link" href="/join">회원가입</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">로그인</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/join">회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">로그인</a>
+                    </li>
+                {{/sessionUser}}
+
+            </ul>
+            <!-- 오른쪽에 역할/이름 영역 -->
+            <ul class="navbar-nab ms-auto">
+                {{#sessionUser}}
+                    <li class="nav-item d-flex align-item-center">
+                        <span class="badge bg-secondary me-2">{{roleDisplay}}</span>
+                        <span class="text-light">{{username}} 님</span>
+                    </li>
                 {{/sessionUser}}
             </ul>
+
         </div>
     </div>
 </nav>
