--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/login-form.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/login-form.mustache
@@ -14,6 +14,9 @@
                     <input type="password" class="form-control" placeholder="Enter password" name="password">
                 </div>
                 <button type="submit" class="btn btn-primary form-control">로그인</button>
+                <a href="https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=73b2007155b6e1dbcc4b8a2f0e7e31ea&redirect_uri=http://localhost:8080/user/kakao">
+                    <img src="/img/kakao_login.png" alt="카카오로그인 버튼">
+                </a>
             </form>
         </div>
     </div>
