--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/update-form.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/update-form.mustache
@@ -12,7 +12,7 @@
         <div class="text-center mb-4">
             {{#user.profileImage}}
             {{!어 src 경로가 /images/ 이네... 스프링에 등록한 리소드 핸들러가 동작 함 }}
-                <img src="/images/{{user.profileImage}}" alt="프로필사진" class="rounded-circle border"
+                <img src="{{user.profilePath}}" alt="프로필사진" class="rounded-circle border"
                      style="width: 200px;height: 200px; object-fit: cover">
                 <div class="mt-2">
                     <form action="/user/profile-image/delete" method="post" style="display: inline">
@@ -37,21 +37,21 @@
                 <input type="text" class="form-control" placeholder="Enter username" name="username"
                        value="{{user.username}}">
             </div>
-            <div class="mb-3">
-                <input type="password" class="form-control" placeholder="Enter password" name="password" required>
-            </div>
-            <div class="mb-3">
-                <input type="email" class="form-control" placeholder="Enter email" name="email"
-                       value="{{user.email}}">
-            </div>
-
-            <div class="mb-3">
-                <label for="profileImage" class="form-label">프로필 사진(선택사항)</label>
-                <input type="file" class="form-control" id="profileImage" name="profileImage" accept="image/*">
-                <small class="form-text text-muted mt-1">이미지 파일만 업로드 가능합니다(JPG, PNG, GIF)</small>
-            </div>
-
-            <button type="submit" class="btn btn-primary form-control">회원정보 수정</button>
+            {{#user.local}}
+                <div class="mb-3">
+                    <input type="password" class="form-control" placeholder="Enter password" name="password" required>
+                </div>
+                <div class="mb-3">
+                    <input type="email" class="form-control" placeholder="Enter email" name="email"
+                           value="{{user.email}}">
+                </div>
+                <div class="mb-3">
+                    <label for="profileImage" class="form-label">프로필 사진(선택사항)</label>
+                    <input type="file" class="form-control" id="profileImage" name="profileImage" accept="image/*">
+                    <small class="form-text text-muted mt-1">이미지 파일만 업로드 가능합니다(JPG, PNG, GIF)</small>
+                </div>
+                <button type="submit" class="btn btn-primary form-control">회원정보 수정</button>
+            {{/user.local}}
         </form>
     </div>
 </div>
