--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/join-form.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/join-form.mustache
@@ -19,9 +19,31 @@
                 <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Enter password" name="password">
                 </div>
+                <!-- 이메일 입력 및 인증번호 발송-->
                 <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Enter email" name="email" required>
+                    <div class="input-group">
+                        <input type="email" class="form-control" placeholder="Enter email" id="email" name="email"
+                               required>
+                        <button type="button" class="btn btn-outline-secondary" onclick="callSendApi()">인증번호전송</button>
+
+                    </div>
                 </div>
+                <!-- 인증번호 입력(처음에는 숨기)-->
+                <div class="mb-3" id="code-box" style="display: none">
+                    <label for="">인증번호</label>
+                    <div class="input-group">
+                        <input type="text" id="code" class="form-control" placeholder="인증번호 6자리" maxlength="6">
+                        <button type="button" class="btn btn-outline-secondary" onclick="callVerifyApi()">확인</button>
+                    </div>
+                    <!-- 인증결과 메세지 표시 영역 -->
+                    <div class="form-text" id="msg">
+
+                    </div>
+                </div>
+
+                <!-- 인증완료 여부 저장(hidden 필드) -->
+                <input type="hidden" id="isEmailVerified" value="false">
+
                 <div class="mb-3">
                     <label for="profileImage" class="form-label">프로필 사진(선택사항)</label>
                     <input type="file" class="form-control" id="profileImage" name="profileImage" accept="image/*">
@@ -32,5 +54,85 @@
         </div>
     </div>
 </div>
+
+<script>
+    // 이메일 전송 API 호출(AJAX)
+    async function callSendApi() {
+        // DOM 엘리먼트에 있는 value 값을 가져와야 한다(사용자가 입력한 이멩일 주소)
+        // 값이 담긴 상태
+        let email = document.querySelector("#email").value;
+
+        if (!email) {
+            alert("이메일을 입력해 주세요");
+            return;
+        }
+
+        // js 에서 통신하는 코드는 기본적으로 try catch 무조건 걸기
+        try {
+            // fetch API 로 POST 요청
+            let response = await fetch("/api/email/send", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({email: email}) // js 객체를 JSON 문자열로 변환처리
+            });
+
+            // 응답 처리
+            if (response.ok) {
+                alert("인증번호가 메일로 전송되었습니다. 메일을 확인해 주세요");
+                document.querySelector("#code-box").style.display = "block";
+            } else {
+                // 서버에서 에러 응답 (400, 500)
+                let error = response.json(); // 문자열 -> js object 로 변환 됨
+                alert("인증번호 전송 실패");
+            }
+        } catch (e) {
+            alert("서버 통신 오류" + e.message);
+        }
+    }
+
+    // 인증번호 확인 API 호출
+    async function callVerifyApi() {
+        // 이메일 인증번호 확인시에는 반드시 이메일과, 인증번호 동시 비교
+        let email = document.querySelector("#email").value;
+        let code = document.querySelector("#code").value;
+        if (!code) {
+            alert("인증번호를 입력해 주세요");
+            return;
+        }
+        try {
+            // fetch API POST 요청
+            let response = await fetch("/api/email/verify",{
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({email:email, code:code})
+            });
+
+            let result = await response.json();
+            let msgBox = document.querySelector("#msg");
+
+            if(response.ok){
+                // 인증 성공
+                msgBox.innerHTML = "<span style='color: green'>인증되었습니다.</span>"
+                // dom 에 접근하여 false 값을 true로 변경
+                document.querySelector("#isEmailVerified").value = true;
+                // 이메일 수정 불가 처리
+                document.querySelector("#email").readOnly = true;
+
+            }else{
+                msgBox.innerHTML = "<span style='color: red'>인증번호가 틀렸습니다.</span>"
+                document.querySelector("#isEmailVerified").value = false;
+            }
+
+        } catch (e) {
+            console.log(e);
+            alert("네트워크 오류 발생");
+        }
+    }
+
+</script>
 
 {{> layout/footer}}
