--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/charge-point.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/charge-point.mustache
@@ -122,7 +122,8 @@
                         },
                         function (response) {
                             if (response.success) {
-                                alert("포트원에서만 결제 성공 단 우리서버에서 검증해야함");
+                                // 확인하는 과정이 필요함
+                                verifyPayment(response.imp_uid, response.merchant_uid);
                             } else {
                                 alert("결제 실패 \n에러내용" + response.err_msg);
                             }
@@ -132,6 +133,38 @@
                 alert(err.message);
             });
         });
+
+        // 5. 서버 검증 함수(최종 승인)
+        //----------------------------------------
+        function verifyPayment(imp_uid, merchant_uid) {
+            fetch('/api/payment/verify', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    impUid: imp_uid,
+                    merchantUid: merchant_uid
+                })
+            }).then(res => {
+                if (!res.ok) {
+                    return res.json().then((e) => {
+                        throw new Error(e.message);
+                    });
+                }
+                //성공
+
+                // 상자를 뜯어서 js Object로 변환
+                return res.json();
+            }).then(data => {
+                // 모든 검증 통과 (포인트 충전 완료)
+                alert(`충전이 완료되었습니다.\n 충전된 금액: ${data.amount}\n 현재 포인트 : ${data.currentPoint}`);
+                location.href = '/user/detail';
+            }).catch(err => {
+                alert('결제 검증에 실패했습니다.\n 관리자에게 문의')
+            })
+        }
+
     });
 
 
