--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/payment-list.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/user/payment-list.mustache
@@ -37,7 +37,7 @@
                             <div class="text-end">
                                 <span class="badge bg-primary fs-6">+{{amount}}P</span>
                                 {{#isRefundable}}
-                                    <a href="/refund/request/1" class="btn btn-outline-danger btn-sm">환불하기</a>
+                                    <a href="/refund/request/{{id}}" class="btn btn-outline-danger btn-sm">환불하기</a>
                                 {{/isRefundable}}
                             </div>
 
