--- a/k_iot_spring/demo_ssr_v1/src/main/resources/templates/admin/admin-refund-list.mustache
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/templates/admin/admin-refund-list.mustache
@@ -19,23 +19,23 @@
                 </tr>
                 </thead>
                 <tbody>
-                <!-- 반복문 시작        -->
-                <tr>
-                    <td>1</td>
-                    <td>ssar2</td>
-                    <td>point_13_UUID</td>
-                    <td>2000</td>
-                    <td>2026.01.09</td>
-                    <td>대기중/승인/거절</td>
-                    <td>
-                        <button class="btn btn-outline-secondary btn-sm"
-                                data-bs-toggle="modal" data-bs-target="#myModal"
-                                onclick="openRefundModal(1, 'ssar2', 'reason', 2000, '대기중')">
-                            상세
-                        </button>
-                    </td>
-                </tr>
-                <!-- 반복문 종료                 -->
+                {{#refundList}}
+                    <tr>
+                        <td>{{id}}</td>
+                        <td>{{username}}</td>
+                        <td>{{merchantUid}}</td>
+                        <td>{{amount}}</td>
+                        <td>{{requestAt}}</td>
+                        <td>{{statusDisplay}}</td>
+                        <td>
+                            <button class="btn btn-outline-secondary btn-sm"
+                                    data-bs-toggle="modal" data-bs-target="#myModal"
+                                    onclick="openRefundModal({{id}}, '{{username}}', '{{reason}}', {{amount}}, '{{statusDisplay}}')">
+                                상세
+                            </button>
+                        </td>
+                    </tr>
+                {{/refundList}}
                 </tbody>
             </table>
 
@@ -113,7 +113,7 @@
             footer.innerHTML = `
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
                 <button type="button" class="btn btn-danger" onclick="toggleRejectInput()">거절</button>
-                <button type="button" class="btn btn-primary">환불승인</button>
+                <button type="button" class="btn btn-primary" onclick="approveRefund(${id})" >환불승인</button>
             `;
         } else {
             footer.innerHTML = `
@@ -147,36 +147,56 @@
         footer.innerHTML = `
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
                 <button type="button" class="btn btn-danger" onclick="toggleRejectInput()">거절</button>
-                <button type="button" class="btn btn-primary">환불승인</button>
+                <button type="button" class="btn btn-primary" onclick="approveRefund(${id})">환불승인</button>
             `;
     }
 
-    function rejectRefund(id){
-        // 관리자가 입력한 텍스트(거절 사유 값)
-        const rejectReason = document.getElementById("rejectReasonInput").value.trim();
-        if (!rejectReason){
+    function rejectRefund(id) {
+        // 관리자가 입력한 텍스트 (거절 사유 값)
+        const rejectReason =
+                document.getElementById("rejectReasonInput").value.trim();
+
+        if(!rejectReason) {
             alert("거절 사유를 입력하세요");
-        }
-        if (confirm("환불요청을 거절하시겠습니까?")){
             return;
         }
 
-        //동적으로 FORM 생성해서 post 요청
+        if(!confirm("환불 요청을 거절하시겠습니까?")) {
+            return;
+        }
+
+        // 동적으로 폼 생성해서 post 요청
         const form = document.createElement('form');
         form.method = 'POST';
-        form.action = `/admin/refund/${id}/reject`;  // 컨트롤러에서 만들어줘야함
-        const input = document.createElement('input');
+        form.action = `/admin/refund/${id}/reject`
+
+        // <form> </form>
+        // <input value="그냥 거절">
+        const input = document.createElement("input");
         input.type = "hidden";
-        input.name = "rejectReason";
-        input.value = rejectReason;
+        input.name = "rejectReason"; // --> R_DTO  -> name : rejectReason
+        input.value = rejectReason; //
+
+        // <form> <input value="그냥 거절"> </form>
         form.appendChild(input);
-
-        document.body.append(form);
-
+        // DOM에 방금 동적으로 만들어 둔 form 태그를 추가 해야 함.
+        document.body.appendChild(form);
+        // 이제 우리는 서버측으로 제출 하기
         form.submit();
     }
 
+    function approveRefund(id) {
+        if(!confirm("환불을 승인하시겠습니까?\n(즉시 환불처리됩니다)")) {
+            return;
+        }
+        // 폼 태그 동적 생성
+        const form = document.createElement("form");
+        form.method = "POST";
+        form.action = `/admin/refund/${id}/approve`;
 
+        document.body.appendChild(form);
+        form.submit();
+    }
 
 </script>
 
